My first commit

--- a/recipes/mincecurry.html
+++ b/recipes/mincecurry.html
@@ -7,6 +7,37 @@
 
 <body>
 <h1>Mince Curry</h1>
+<img src="https://assets.unileversolutions.com/recipes-v2/179030.jpg?imwidth=1600" alt="mince curry dish">
+
+<h3>Description</h3>
+<p>This is a traditional mince curry dish, made with beef mince and a hanful of indian spices to transform ordinary beef mince into a delicious family dinner packed with great flavour. Serve with rice, pap or mash, or pile your mince on hot buttered toast.</p>
+
+<h3>Ingredients</h3>
+<ul>
+    <li> 1KG Beef mince</li>
+    <li>1 Diced tomato</li>
+    <li>1 Potato cut into 6 pieces</li>
+    <li>1 Diced onion</li>
+    <li>Chilli powder</li>
+    <li>Kashmiri paste</li>
+    <li>2 Bayleaf</li>
+    <li>2 tbs ginger garlic paste</li>
+    <li>salt</li>
+</ul>
+
+<h3>Steps</h3>
+
+<ol>
+    <li>put 1 tbs canola oil in heated pot</li>
+    <li>add bayleaf , aniseed</li>
+    <li>add diced onion and cook till light brown</li>
+    <li>add diced tomato and stir</li>
+    <li>add all spices and half cup water and mix well</li>
+    <li>add cut potato and mix well and let pot simmer</li>
+    <li>add lean beef mince and mix</li>
+    <li>add salt to taste</li>
+    <li>leave on hot stove for 15 - 20 minutes</li>
+</ol>
 
 </body>
 </html>
