Added Lasagne recipe Changed to unordered list of recipes on index

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/mincecurry.html">Mince Curry</a>
-
+    <ul>
+        <li><a href="./recipes/mincecurry.html">Mince Curry</a></li>
+        <li><a href="./recipes/lasagne.html">Lasagne</a></li>
+    </ul>
 </body>
 </html>
