--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <ul>
         <li><a href="./recipes/mincecurry.html">Mince Curry</a></li>
         <li><a href="./recipes/lasagne.html">Lasagne</a></li>
+        <li><a href="./recipes/pizza.html">Pizza</a></li>
     </ul>
 </body>
 </html>
