Added return home to secondary pages

--- a/recipes/lasagne.html
+++ b/recipes/lasagne.html
@@ -30,6 +30,7 @@
         <li>Top with lasagne sheets (try not to overlap, but we don't want big spaces either). Then top with a third of the béchamel, followed by a third of the meat sauce.</li>
         <li>Then sprinkle on the cheese and place in a preheated oven at 200C/400F for 25 - 30 minutes, until the cheese is golden.</li>
     </ol>
-    
+
+    <a href="../index.html">Home</a>
 </body>
 </html>
