--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -29,5 +29,7 @@
         <li>Shape the dough.</li>
         <li>Bake the pizza.</li>
     </ol>
+
+    <a href="../index.html">Home</a>
 </body>
 </html>
