--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 </head>
 
 <body>
+
     <h1>Odin Recipes</h1>
+    <img src="https://media.istockphoto.com/id/1026966886/vector/cookbook-cook-book-cover.jpg?s=612x612&w=0&k=20&c=9gdDl1NLNYjvIIQbuisOsfgpYddjHKFR-xat3GVup9M=" alt="recipe book">
     <ul>
         <li><a href="./recipes/mincecurry.html">Mince Curry</a></li>
         <li><a href="./recipes/lasagne.html">Lasagne</a></li>
