added meal description to pizza page

--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -10,6 +10,9 @@
     <h1>Pizza</h1>
     <img src="https://thumbs.dreamstime.com/b/pizza-rustic-italian-mozzarella-cheese-basil-leaves-35669930.jpg" alt="Delicious cheesy pizza">
 
+    <h3>Description</h3>
+    <p1>A delicious italian styled oven baked pizza topped with multiple types of cheese</p1>
+
     <h3>Ingredients</h3>
     <ul>
         <li>Cheese</li>
